# OpenGLLearning

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
include/: Application.h  Camera.h  Mesh.h  Model.h  Primitives.h  Renderer.h  ResourceManager.h  Scene.h  SceneObject.h  Shader.h  UI.h
include/stb/: stb_image.h
resources/scenes/: default.json
resources/scenes/benchmark/: 30x30_basic.json  5x5_basic.json
resources/shaders/: default.frag  default.vert  highlight.frag  highlight.vert
resources/shaders/Laboratory_I/: ADS_PerFragment_Phong.vert  ADS_PerVertex_Gouraud.vert  AD_PerVertex.frag  AD_PerVertex.vert
resources/shaders/Laboratory_IV/: deferred_lighting.frag  deferred_lighting.vert
resources/shaders/deferred/: deferred_lighting.frag  gbuffer.frag  gbuffer.vert
resources/shaders/laboratory_II/: ADS_PerFragment_Phong.frag  ADS_PerFragment_Phong.vert  ADS_PerVertex_Gouraud.frag  ADS_PerVertex_Gouraud.vert  AD_PerVertex.frag  AD_PerVertex.vert
resources/shaders/lighting/: diffuse.frag  diffuse.vert  phong.frag  phong.vert  simple.frag  simple.vert
resources/shaders/special_effects/: chrome.frag  chrome.vert  toon.frag  toon.vert  wave.frag  wave.vert
resources/shaders/tessellation/: tessellation.frag  tessellation.tesc  tessellation.tese  tessellation.vert
scripts/: Run-ClangTidy.ps1
src/: Application.cpp  Camera.cpp  Mesh.cpp  Model.cpp  Primitives.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  UI.cpp  main.cpp
